            separator. 
        - added member `setWidth' to modify the maximum width of lines written
            to the ostream initialized with an OHexStreambuf object.
        - close() is replaced by eoi(), alternatively the eoi manipulator can
            be inserted into OHexStreambuf's std::ostream

  * OMutexStream:
        new class offering mutex protected ostream operations.

  * Process:
        - The mode parameter defined for the second through fourth constructor
            must be a Process::IOMode value. The same applies to the function
            call operator previously accespting a size_t argument.
        - cerr() is replaced by childErrStream()
        - the eoi() member calls eoi_(). Alternatively the eoi manipulator can
            be inserted into Process objects to indicate the process's
            end-of-information.
        - the eoi manipulator, defined for Process only, is superfluous and is
            discontinued. Existing code now uses the Eoi-manipulator after 
            recompilation. Changes to the source code are not required.
        - the std::ostream &operator<<(std::ostream &(*pf)(std::ostream &)) 
            is superfluous and is discontinued. 

  * RandBuf:
        - expects a size_t seed (used to be: long seed);
        - fixed a memory leak

  * Selector:
        - wait() returns 0 when its read, write and except file descriptor
            sets are empty.

  * SyslogBuf:
        - disontinued the Syslogbuf(char const *, ... ) constructor
        - open() is replaced by reset()
        - close() is replaced by eoi(), alternatively the eoi manipulator can
            be inserted into Syslogbuf's std::ostream

  * SyslogStream:
        - disontinued the SyslogStream(char const *, ... ) constructor

  * Fixed flaw in Log's FBB::fnl handling


bobcat (4.09.00)

  * The class Log unconditionally inserts level-free messages; level
    objects may be inserted anywhere in insertion statements.
