@@ -16,54 +16,85 @@ manpagesection(MANIPULATORS)
     itb(FBB::center) defined in tt(bobcat/align)
         This manipulator can be specified when constructing an bf(FBB::Align)
         object to indicate that a table column should center its contents.
+
     itb(FBB::decindent) defined in tt(bobcat/indent)
         This manipulator reduces the indentation level.
+
     itb(FBB::def)
         defined in tt(bobcat/table)
         This manipulator `completes' a bf(Table) object to a full rectangular
         object. It can be inserted into a bf(Table) object.
+
+    itb(FBB::eoi)
+        defined in tt(bobcat/eoi)
+       Inserting this manipulator indicates `end of input' of streams
+        initialized with classes derived from tt(std::streambuf) receiving
+        information from external sources. Examples (non-exhaustive list) are
+        found in the classes bf(EncryptBuf, HMacBuf, OfdBuf, Process). Usually
+        classes supporting the tt(eoi) manipulator also offer a member tt(eoi)
+        performing the same actions as the manipulator.
+
     itb(FBB::err) defined in tt(bobcat/msg)
         Generates an error message.
-    itb(FBB::fatal) defined in tt(bobcat/msg)
-        Generates a fatal message, followed by an bf(Exception)bf((1)) exception.
-    itb(FBB::fs) defined in tt(bobcat/tablebuf)
-        Starts the definition of the next element in a table.
-    itb(FBB::info) defined in tt(bobcat/msg)
-        Generates an informational message.
-    itb(FBB::incindent) defined in tt(bobcat/indent)
-        This manipulator will increment the indentation level.
-    itb(FBB::indent) defined in tt(bobcat/indent)
-        This manipulator inserts the currently defined number of indentation
-        blanks into an tt(ostream).
-    itb(FBB::indentdec) defined in tt(bobcat/indent)
-        This manipulator will insert, then reduce the indentation level.
-    itb(FBB::indentinc) defined in tt(bobcat/indent)
-        This manipulator will insert, then increment the indentation level.
-    itb(FBB::lm) defined in tt(bobcat/ofoldbuf)
-        This manipulator sets the left margin of bf(FBB::OFoldStream) objects.
-    itb(FBB::mlm) defined in tt(bobcat/ofoldbuf) 
-        This manipulator modifies (alters) the left margin of
-        bf(FBB::OFoldStream) objects.
-    itb(FBB::nlindent) defined in tt(bobcat/indent)
-        This manipulator will insert a newline, then indent.
-    itb(FBB::rs) defined in tt(bobcat/tablebuf)
-        Starts the definition of the next row in a table.
-    itb(FBB::spool) defined in tt(bobcat/msg)
-        Generates a (partial) informational message. 
+
     itb(FBB::errnodescr) defined in tt(bobcat/exception)
         Inserts the textual description of the current tt(::errno) value
         into the tt(ostream) into which the manipulator is inserted. If
         tt(errno == 0) nothing is inserted.
+
+    itb(FBB::fatal) defined in tt(bobcat/msg)
+        Generates a fatal message, followed by an bf(Exception)bf((1))
+        exception. 
+
+    itb(FBB::fs) defined in tt(bobcat/tablebuf)
+        Starts the definition of the next element in a table.
+
+    itb(FBB::info) defined in tt(bobcat/msg)
+        Generates an informational message.
+
+    itb(FBB::incindent) defined in tt(bobcat/indent)
+        This manipulator will increment the indentation level.
+
+    itb(FBB::indent) defined in tt(bobcat/indent)
+        This manipulator inserts the currently defined number of indentation
+        blanks into an tt(ostream).
+
+    itb(FBB::indentdec) defined in tt(bobcat/indent)
+        This manipulator will insert, then reduce the indentation level.
+
+    itb(FBB::indentinc) defined in tt(bobcat/indent)
+        This manipulator will insert, then increment the indentation level.
+
+    itb(FBB::lm) defined in tt(bobcat/ofoldbuf)
+        This manipulator sets the left margin of bf(FBB::OFoldStream) objects.
+
+    itb(FBB::mlm) defined in tt(bobcat/ofoldbuf) 
+        This manipulator modifies (alters) the left margin of
+        bf(FBB::OFoldStream) objects.
+
+    itb(FBB::nlindent) defined in tt(bobcat/indent)
+        This manipulator will insert a newline, then indent.
+
+    itb(FBB::rs) defined in tt(bobcat/tablebuf)
+        Starts the definition of the next row in a table.
+
+    itb(FBB::spool) defined in tt(bobcat/msg)
+        Generates a (partial) informational message. 
+
     itb(FBB::warning) defined in tt(bobcat/msg)
         Generates a warning message.
     )
 
 manpageseealso()
-    bf(bobcat)(7), bf(columnwidth)(3bobcat), bf(equalwidth)(3bobcat), 
-    bf(indent)(3bobcat), bf(lm)(3bobcat),
+    bf(bobcat)(7), bf(columnwidth)(3bobcat), bf(eoi)(3bobcat), 
+    bf(equalwidth)(3bobcat), bf(indent)(3bobcat), bf(lm)(3bobcat),
     bf(mlm)(3bobcat), bf(msg)(3bobcat), bf(table)(3bobcat) 
 
 manpagebugs()
     None Reported.
 
 includefile(include/trailer)
+
+
+
+
