@@ -1,6 +1,0 @@
-#include "process.ih"
-
-size_t Process::bufSize() const
-{
-    return d_data->d_bufSize;
-}
