@@ -1,0 +1,4 @@
+inline size_t Process::bufSize() const
+{
+    return d_bufSize;
+}
