@@ -4,6 +4,7 @@ Process::~Process()
 {
     stop();
 
-    delete d_data;      // delete additional data
+//    delete d_data;      // delete additional data
+    Signal::instance().remove(SIGCHLD, *this);  
 }
 
