@@ -5,7 +5,7 @@ void Process::eoi_()
     if (active())
     {
         close();
-        d_data->d_exitStatus = waitForChild();
+        d_exitStatus = waitForChild();
     }
 }
 
