@@ -1,6 +1,0 @@
-#include "process.ih"
-
-int Process::exitStatus() const
-{
-    return d_data->d_exitStatus;
-}
