@@ -1,0 +1,4 @@
+inline int Process::exitStatus() const
+{
+    return d_exitStatus;
+}
