@@ -1,6 +1,0 @@
-#include "processdata.ih"
-
-ProcessData::~ProcessData()
-{
-    Signal::instance().remove(SIGCHLD, *this);  
-}
