@@ -1,5 +1,0 @@
-#include "processdata.ih"
-
-ProcessData::
-{
-}
