@@ -1,19 +1,0 @@
-#include "processdata.decl"
-
-//#include <iostream> // TMP
-
-//#include <chrono>
-//#include <fcntl.h>
-//#include <unistd.h>
-//
-//#include <sys/types.h>
-//#include <sys/wait.h>
-//
-//#include "../exception/exception"
-//#include "../redirector/redirector"
-
-using namespace std;
-using namespace FBB;
-
-// #include "retpid1.f"
-
