@@ -1,9 +1,0 @@
-#include "processdata.ih"
-
-ProcessData::ProcessData(size_t bufSize)
-:
-    d_bufSize(bufSize == 0 ? 1 : bufSize)
-{
-    Signal::instance().add(SIGCHLD, *this);
-}
-
